# khmer-tokenizer

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
configs/inference/: default.yaml
configs/training/: default.yaml
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
docker/: Dockerfile.api  Dockerfile.docs  Dockerfile.ui  docker-compose.yml
notebooks/model_development/: bert-from-sratch.ipynb
