[project]
name = "ai-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "typer>=0.15.2",
    "locust>=2.33.2",
    "onnx>=1.17.0",
    "requests>=2.32.3",
    "fastapi>=0.115.12",
    "khmercut>=0.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0"
]

ui = [
    "gradio>=5.23.1"
]

cpu = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0"
]

cu124 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0"
]

[tool.uv]
# Optional: ensure mutually exclusive extras
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" }
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" }
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
